fixed it so that it only plays audio when you click the button

--- a/style.css
+++ b/style.css
@@ -5,20 +5,15 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    
-    animation-name: chachaslide;
-    animation-duration:20s;
-    animation-iteration-count: 1;
-
-    /*animation-name: slideLeft;
-    animation-duration:1s;
-    animation-iteration-count: 1;
-    animation-direction: normal;
-    animation-play-state: running;
-    animation-timing-function: cubic-bezier(0.24, -1, 0.48, 2.01);
-*/
+    width: 25%;
+    height: 25%;
+    transform: translateY(-150%)
+    /*
+        animation-name: chachaslide;
+    animation-duration: 20s;
+    */
 }
+
 @keyframes chachaslide {
     /*one hop this time*/
     5%{transform: translateY(0%)}
@@ -60,45 +55,5 @@ img{
     /*cha cha real smooth*/ 
     85%{filter:saturate(1)}
     100%{filter:saturate(100)}
-}
-
-
-
-
-
-
-@keyframes slideLeft{
-    from{transform: translateX(300%)}
-}
-@keyframes slideRight{
-    to{transform: translateX(300%)}
-}
-@keyframes slideUp{
-    50%{transform: translateY(-100%)}
-}
-@keyframes slideDown{
-    to{transform: translateY(300%)}
-}
-@keyframes rotate{
-    50%{transform: rotateZ(360deg)}
-}
-@keyframes grow {
-    50%{transform: scale(2,2);}
-}
-@keyframes shrink {
-    50%{transform: scale(0.5,0.5);}
-}
-@keyframes fade {
-    50%{opacity: 1;}
-}
-@keyframes colorChange {
-    0%{background-color: hsl(0, 88%, 47%)}
-    20%{background-color: hsl(39, 88%, 47%)}
-    40%{background-color: hsl(54, 92%, 56%)}
-    60%{background-color: hsl(132, 92%, 56%)}
-    80%{background-color: hsl(205, 93%, 42%)}
-    100%{background-color: hsl(284, 93%, 42%)}
-}
-@keyframes glow{
-    50%{box-shadow: 0px 0px 50px hsl(60, 84%, 50%)}
+    100%{transform: translateY(0%)}
 }
